--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "chart.js": "^2.9.4",
     "emotion-theming": "^11.0.0",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
+    "react-chartjs-2": "^2.11.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
